# task_project_manager

./: .gitignore
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
