[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
sqlx = { version = "0.7.4", features = [ "postgres" ] }
sqlx-core = { version = "0.7.4", features = [ "postgres" ] }
sqlx-rt = "0.6.3"
tokio = { version = "1.37.0", features = [ "full" ] }
